Return lockService from createComponents (#670) (#672)
(cherry picked from commit 5bbe395aceac53317c80de2ce0c187a54a87151d)

Signed-off-by: Craig Perkins <cwperx@amazon.com>
Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
(cherry picked from commit 33f33c5ad1eb4ebce0c7a851a9f7671bc8c79be0)